<resources>
    <string name="app_name">Pizza váltó</string>
    <string name="login">Bejelentkezés</string>
    <string name="haveaccount">Van már fiókod?</string>
    <string name="register">Regisztrálás</string>
    <string name="password">Jelszó</string>
    <string name="email">Email</string>
    <string name="firstname">Keresztnév</string>
    <string name="lastname">Vezetéknév</string>
    <string name="registernow">Regisztrálj</string>
    <string name="noaccount">Még nincs fiókod?</string>
    <string name="profile">Profil</string>
    <string name="shoppingCart">Kosár</string>
    <string name="aboutUs">Rólunk</string>
    <string name="logout">Kijelentkezés</string>
    <string name="support">Ügyfélszolgálat</string>
    <string name="others">További beállítások</string>
    <string name="settings">Beállítások</string>
    <string name="menu">Menü</string>
    <string name="edit">Szerkesztés</string>
    <string name="save">Mentés</string>
    <string name="role">Szerep</string>
    <string name="profilepicture">Profilkép</string>
    <string name="emailaddress">Email cím</string>
    <string name="motto">\"Manapság elterjedt probléma lett a világon az egészség kérdése. Pizzáink segítséget nyújtanak az elhízást mellett, hisz ha minket választ vigyázunk az alakjára! Nem fog hiányozni egy gramm se!\"</string>
    <string name="pictureofapizza">Kép egy pizzáról</string>
    <string name="doyouhavequestion">Kérdésed van?</string>
    <string name="dont">Ne legyen!</string>
    <string name="phonecontact">Telefonos elérhetőségek</string>
    <string name="telefonszam1">+36&#8211;30&#8211;646&#8211;1813</string>
    <string name="telefonszam2">+36&#8211;30&#8211;356&#8211;2465</string>
    <string name="emailcontact">Email címes elérhetőség</string>
    <string name="supportaddress">info@pizzavalto.hu</string>
    <string name="callus">Keress bennünket bátran!</string>
    <string name="menubutton">Menu</string>
    <string name="order_button_text">Rendelés</string>
    <string name="pizza_picture">Pizza kép</string>
    <string name="no">Mégsem</string>
    <string name="add">Hozzáadás</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="addtobasket">Hozzáadás kosárhoz</string>
    <string name="quantity">Mennyiség:</string>
    <string name="pizza_price">Ár: %d Ft</string>
    <string name="one">1</string>
    <string name="delete">Törlés</string>
    <string name="pizza_name">Pizza neve</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="orders">Rendelések</string>
    <string name="changedata">Adatok módosítása</string>
    <string name="relogin_to_save">A módosítások mentése érdekében lépjen be újra!</string>
    <string name="reload">Újraindítás</string>
    <string name="logintoaccount">Jelentkezzen be fiókjába</string>
    <string name="registernewaccount">Hozzon létre egy új fiókot</string>
    <string name="order">Rendelés</string>
    <string name="address">Cím:</string>
    <string name="location">Tartózkodási hely</string>
    <string name="phonenumber">Telefonszám:</string>
    <string name="phonenumber_">Telefonszám</string>
    <string name="sumPrice">Fizetendő összeg:</string>
    <string name="back">Vissza</string>
    <string name="ordering">Megrendelés</string>
    <string name="_0">0</string>
    <string name="sumPriceStartValue">Ár Ft</string>
    <string name="x">x</string>
    <string name="noItemFound">A kosárban nincs termék!</string>
    <string name="payToGo">Fizetendő összeg: 0 Ft</string>
    <string name="noOrdersYet">Még nem rendéltél semmit!</string>
    <string name="profileInformation">Profil adatok</string>
    <string name="contactUs">Keresse bátran munkatársainkat bármely telefonszámunkon, esetleg e-mail címünkön!</string>
    <string name="details">Részletek</string>
    <string name="admin_user">Admin|User</string>
    <string name="name">Név</string>
    <string name="pizza">Pizza</string>
    <string name="successfull">Sikeres megrendelés</string>
    <string name="waitxd">A futár megérkezéséig türelmét kérjük.</string>
    <string name="ok">Oké</string>
</resources>