<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SupportFragment"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorlightgray2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorlightgray"
        android:gravity="left|center"
        android:paddingStart="20dp"
        android:text="@string/doyouhavequestion"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="left|center"
        android:text="@string/dont"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorlightgray"
        android:gravity="left|center"
        android:paddingStart="20dp"
        android:text="@string/phonecontact"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="left|center"
            android:paddingStart="20dp"
            android:text="@string/telefonszam1"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="left|center"
            android:paddingStart="20dp"
            android:text="@string/telefonszam2"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorlightgray"
        android:gravity="left|center"
        android:paddingStart="20dp"
        android:text="@string/emailcontact"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="left|center"
        android:paddingStart="20dp"
        android:text="@string/supportaddress"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

</LinearLayout>