<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pizzaName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/pizza_name"
            android:textColor="@color/black"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/minus"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/itemQuantity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/plus"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/sumPrice"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/sumPriceStartValue"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/deleteItem"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/x"
            android:textColor="@color/black" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorlightgray2" />

</LinearLayout>