<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="380dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/txt_dia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/addtobasket"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_minus"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@android:color/transparent"
                android:text="@string/minus"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/text_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one"
                android:textColor="@color/black"
                android:textSize="35sp" />

            <Button
                android:id="@+id/button_plus"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:text="@string/plus"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_no"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_yes"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>