<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/changedata"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/relogin_to_save"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_ok"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/reload"
        android:textColor="@color/colorPrimaryText"
        android:textStyle="bold" />

</LinearLayout>