<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    android:fitsSystemWindows="true"
    android:gravity="bottom"
    android:screenOrientation="portrait"
    tools:context=".components.LoginActivity">

    <LinearLayout
        android:id="@+id/inputFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:text="Jelentkezzen be fiókjába"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_bg"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="10sp"
            android:hint="@string/email"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="@color/colorPrimaryText" />

        <com.google.android.material.textfield.TextInputEditText
            android:background="@drawable/edit_text_bg"
            android:layout_marginBottom="10dp"
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="10sp"
            android:hint="@string/password"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="@color/colorPrimaryText" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/oval_button"
            android:onClick="login"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noaccount"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/RegisterTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:text="@string/registernow"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>