<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".fragments.AboutUsFragment"
    tools:ignore="UseCompoundDrawables">

    <androidx.cardview.widget.CardView
        android:id="@+id/dataBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@color/colorlightgray"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/aboutUs"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="fill_horizontal"
                android:text="@string/motto"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="VisualLintLongText" />

            <ImageView
                android:id="@+id/about_us_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/pictureofapizza"
                android:src="@drawable/pizzavaltoaboutus" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>